--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,7 +18,8 @@ common-js:
 <html lang="en">
   <!-- Beautiful Jekyll | MIT license | Copyright Dean Attali 2016 -->
   {% include head.html %}
-
+  {% seo %}
+    
   <body>
 
     {% include gtm_body.html %}
